[gd_scene load_steps=12 format=3 uid="uid://tutorial123"]

[ext_resource type="Script" path="res://scripts/ui/tutorial.gd" id="1_tutorial"]
[ext_resource type="Texture2D" path="res://assets/icons/book.svg" id="2_book"]
[ext_resource type="PackedScene" uid="uid://tutorialboard123" path="res://scenes/ui/tutorial_board.tscn" id="3_tutorial_board"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.11, 0.09, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.35, 0.32, 0.28, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
content_margin_left = 32.0
content_margin_top = 32.0
content_margin_right = 32.0
content_margin_bottom = 32.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nav_normal"]
bg_color = Color(0.22, 0.32, 0.18, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.35, 0.5, 0.28, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 24.0
content_margin_top = 12.0
content_margin_right = 24.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nav_hover"]
bg_color = Color(0.28, 0.42, 0.22, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.45, 0.6, 0.35, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 24.0
content_margin_top = 12.0
content_margin_right = 24.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nav_disabled"]
bg_color = Color(0.13, 0.13, 0.12, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.2, 0.18, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 24.0
content_margin_top = 12.0
content_margin_right = 24.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_close_normal"]
bg_color = Color(0.18, 0.18, 0.16, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.28, 0.28, 0.25, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 24.0
content_margin_top = 12.0
content_margin_right = 24.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_close_hover"]
bg_color = Color(0.25, 0.25, 0.22, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.38, 0.38, 0.32, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 24.0
content_margin_top = 12.0
content_margin_right = 24.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_board_bg"]
bg_color = Color(0.08, 0.07, 0.06, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tutorial")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.18, 0.16, 0.13, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(1100, 850)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Header" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="BookIcon" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
texture = ExtResource("2_book")
expand_mode = 1
stretch_mode = 5

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.93, 0.86, 0.71, 1)
theme_override_font_sizes/font_size = 56
text = "Tutorial"

[node name="ContentContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="BoardContainer" type="PanelContainer" parent="CenterContainer/PanelContainer/VBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(416, 512)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_board_bg")

[node name="TutorialBoard" parent="CenterContainer/PanelContainer/VBoxContainer/ContentContainer/BoardContainer" instance=ExtResource("3_tutorial_board")]
position = Vector2(8, 8)

[node name="TextContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="StepIndicator" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/ContentContainer/TextContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.55, 0.48, 1)
theme_override_font_sizes/font_size = 28
text = "Step 1 of 5"

[node name="StepTitle" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/ContentContainer/TextContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.93, 0.86, 0.71, 1)
theme_override_font_sizes/font_size = 42
text = "Movement"

[node name="StepDescription" type="RichTextLabel" parent="CenterContainer/PanelContainer/VBoxContainer/ContentContainer/TextContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.85, 0.8, 0.7, 1)
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Pieces move and attack like regular chess."
fit_content = true

[node name="NavigationContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="PrevButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/NavigationContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.93, 0.86, 0.71, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.85, 1)
theme_override_colors/font_disabled_color = Color(0.4, 0.38, 0.35, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_nav_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_nav_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nav_normal")
theme_override_styles/disabled = SubResource("StyleBoxFlat_nav_disabled")
text = "Previous"

[node name="StepDots" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/NavigationContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="NextButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/NavigationContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.93, 0.86, 0.71, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.85, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_nav_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_nav_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nav_normal")
text = "Next"

[node name="CloseButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.65, 0.55, 1)
theme_override_colors/font_hover_color = Color(0.85, 0.8, 0.7, 1)
theme_override_font_sizes/font_size = 34
theme_override_styles/normal = SubResource("StyleBoxFlat_close_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_close_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_close_normal")
text = "Back to Menu"
